Fix overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,4 +7,5 @@ body, html, canvas {
     padding: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
